--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ CGPA: 10</p>
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<div id="proj"> <a href="images/dsp_project.png" class="image fit"><img src="images/dsp_project.png" title="Gesture Controlled Automation" alt="" /></a></div>
+								<div id="proj"> <a href="images/dsp_project.PNG" class="image fit"><img src="images/dsp_project.png" title="Gesture Controlled Automation" alt="" /></a></div>
 							
 							<h3>Personalised Secure Gesture Controlled GUI Automation System</h3>
 							<p>Built a personalized secure gesture controlled GUI automation system. It is an interactive interface that interacts with the user with voice notes. It is provided with a two-step security system using facial recognition and gesture controls.
@@ -162,14 +162,14 @@ Tools used:</b> OpenCV, Chroma-keying, Contour detection, Template Matching, PyA
 											
 </article>
 							<article class="from-right">
-								<div id="proj"> <a href="bluetooth_automation.png" class="image fit"><img src="images/bluetooth_automation.png" title="Bluetooth Home Automation" alt="" /></a></div>
+								<div id="proj"> <a href="bluetooth_automation.PNG" class="image fit"><img src="images/bluetooth_automation.png" title="Bluetooth Home Automation" alt="" /></a></div>
 <h3>Bluetooth Home Automation</h3>
 							<p>Used Bluetooth module HC-05 to control tube lights, fans and window curtains just by giving commands on mobile phone.</p>
 <br><b>
 Tools used:</b> Bluetooth Module HC-05, Relays, Arduino.
 							</article>
 							<article class="from-bottom">
-								<div id="proj"> <a href="line_follow.png" class="image fit"><img src="images/line_follow.png" title="Line following robot" alt="" /></a></div>
+								<div id="proj"> <a href="line_follow.PNG" class="image fit"><img src="images/line_follow.png" title="Line following robot" alt="" /></a></div>
 <h3>Line Following Robot</h3>
 							<p>A robot that uses white line sensors to adjust it's orientation and make turns, which is programmed robot traverse the arena. The
 robot had to reach the GOAL, by following the provided path as an
